Resolved text issue and spacing issue with landing welcome message once logged in via GitHub. (#848)

--- a/src/common/containers/landing.css
+++ b/src/common/containers/landing.css
@@ -11,6 +11,10 @@
   margin: 50px 0 0 0;
 }
 
+.bannerMessage {
+  margin-top: 1.25rem;
+}
+
 .bannerImage {
   width: 920px;
   margin-bottom: 1.2em;
